# cyber_ai_project

./: .env.example  .gitignore  README.md  fraud_bot.py  pyproject.toml  recover.py  test_api.py
admin-dashboard/: check_braces.py  package-lock.json  package.json
admin-dashboard/src/: App.css  App.jsx  index.css
backend/: database.sqlite  db.js  package-lock.json  package.json  server.js
config/: default.yaml
src/: __init__.py  cli.py  config.py
src/agents/: __init__.py  base.py  orchestrator.py
src/agents/incident_response/: __init__.py  agent.py
src/agents/incident_response/tools/: __init__.py  collect_evidence.py  contain_threat.py  execute_playbook.py  generate_report.py  triage_incident.py
src/agents/threat_detection/: __init__.py  agent.py
src/agents/threat_detection/tools/: __init__.py  analyze_logs.py  analyze_network_traffic.py  correlate_events.py  detect_ioc.py
src/agents/vulnerability_management/: __init__.py  agent.py
src/agents/vulnerability_management/tools/: __init__.py  generate_vuln_report.py  prioritize_risk.py  recommend_remediation.py  scan_vulnerabilities.py  verify_patch.py
